# over_leveraging

./: .gitignore  BLEND-BUG-BOUNTY-REPORT.md  BLEND-VULNERABILITY-REPORT.md  Blend_Bug_Bounty_Report.docx  Blend_Protocol_Security_Report_V1.docx  Cargo.toml  UX-AUDIT.md  doc.md  gen_bounty_report.py  gen_report.py  profitability_analysis.md
.github/workflows/: deploy.yml
alerts/: package-lock.json  package.json  wrangler.toml
alerts/src/: email.ts  index.ts  schema.sql  stellar.ts  xdr.ts
contracts/strategies/blend_leverage/: Cargo.toml
contracts/strategies/blend_leverage/src/: blend_pool.rs  constants.rs  leverage.rs  lib.rs  reserves.rs  soroswap.rs  storage.rs  test_integration.rs  test_leverage.rs
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: blend.ts  defindex.ts  main.ts  style.css
landing/: index.html  style.css
scripts/: debug_blnd.ts  debug_pool.ts  deploy_strategy.ts  discover_pools.ts  gen_thumbnail.py  get_oracle.ts  get_oracle2.ts  identify_tokens.ts  mainnet_loop.ts  oracle_deep.ts  oracle_deep2.ts  oracle_deep3.ts  oracle_deep4.ts  package.json  query_oracle.ts  test_strategy.ts  testnet_loop.ts
tests/: leverage_sim.rs
