[package]
name = "over_leveraging"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
stellar-strkey = "0.0.8"
stellar-xdr = { version = "25", features = ["curr"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", branch = "snapshot-source-tx", features = ["testutils"] }
soroban-ledger-snapshot-source-tx = { git = "https://github.com/stellar/rs-soroban-sdk", branch = "snapshot-source-tx" }
blend-contract-sdk = "2.25.0"

[patch.crates-io]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", branch = "snapshot-source-tx" }
soroban-sdk-macros = { git = "https://github.com/stellar/rs-soroban-sdk", branch = "snapshot-source-tx" }
