[package]
name = "blend_leverage_strategy"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "25.3.0"
defindex-strategy-core = "0.3.0"
soroban-fixed-point-math = "1.3.0"
blend-contract-sdk = "2.25.0"

[dev-dependencies]
soroban-sdk = { version = "25.3.0", features = ["testutils"] }
blend-contract-sdk = { version = "2.25.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
